WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178037
[iOS WK2] API tests added in
r222991
are failing in iOS 11 test runners
https://bugs.webkit.org/show_bug.cgi?id=178037
Summary
[iOS WK2] API tests added in r222991 are failing in iOS 11 test runners
Wenson Hsieh
Reported
2017-10-06 16:37:42 PDT
Followup to
https://trac.webkit.org/changeset/222991/webkit
.
Attachments
Does this build on iOS 11?
(3.73 KB, patch)
2017-10-06 16:54 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Fix ChangeLog typo
(3.72 KB, patch)
2017-10-06 18:56 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-10-06 16:46:33 PDT
The implementation of -[WKContentViewInteraction insertTextSuggestion:] is defined out in non-internal builds, causing API tests that call this method to crash.
Wenson Hsieh
Comment 2
2017-10-06 16:54:10 PDT
Created
attachment 323068
[details]
Does this build on iOS 11?
Wenson Hsieh
Comment 3
2017-10-06 17:09:08 PDT
Comment on
attachment 323068
[details]
Does this build on iOS 11? View in context:
https://bugs.webkit.org/attachment.cgi?id=323068&action=review
> Source/WebKit/ChangeLog:8 > + This patch carries out some minor cleanup around UIKitSPI.h in WebKit2, so that we the internal SDK isn't
Whoops, extra "we" in here! Will remove.
Wenson Hsieh
Comment 4
2017-10-06 18:56:05 PDT
Created
attachment 323077
[details]
Fix ChangeLog typo
WebKit Commit Bot
Comment 5
2017-10-06 19:37:02 PDT
Comment on
attachment 323077
[details]
Fix ChangeLog typo Clearing flags on attachment: 323077 Committed
r223017
: <
http://trac.webkit.org/changeset/223017
>
Wenson Hsieh
Comment 6
2017-10-07 02:30:44 PDT
Looks like the API tests are passing now.
Radar WebKit Bug Importer
Comment 7
2017-10-07 02:31:29 PDT
<
rdar://problem/34870976
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug