[iOS WK2] API tests added in r222991 are failing in iOS 11 test runners https://bugs.webkit.org/show_bug.cgi?id=178037

Reviewed by Tim Horton.

This patch carries out some minor cleanup around UIKitSPI.h in WebKit2, so that the internal SDK isn't required
to implement -[WKContentView insertTextSuggestion:].

* Platform/spi/ios/UIKitSPI.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView insertTextSuggestion:]):


Canonical link: https://commits.webkit.org/194288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223017 268f45cc-cd09-0410-ab3c-d52691b4dbfc