Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -2982,7 +2982,6 @@ static void selectionChangedWithTouch(WKContentView *view, const WebCore::IntPoi
     [self.inputDelegate selectionDidChange:self];
 }
 
-#if USE(APPLE_INTERNAL_SDK)
 - (void)insertTextSuggestion:(UITextSuggestion *)textSuggestion
 {
     // FIXME: Replace NSClassFromString with actual class as soon as UIKit submitted the new class into the iOS SDK.
@@ -2994,7 +2993,6 @@ static void selectionChangedWithTouch(WKContentView *view, const WebCore::IntPoi
     if ([inputDelegate respondsToSelector:@selector(_webView:insertTextSuggestion:inInputSession:)])
         [inputDelegate _webView:_webView insertTextSuggestion:textSuggestion inInputSession:_formInputSession.get()];
 }
-#endif // USE(APPLE_INTERNAL_SDK)
 
 - (NSString *)textInRange:(UITextRange *)range
 {
